--- a/mrouter/src/main/AndroidManifest.xml
+++ b/mrouter/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mtan.mrouterapp" />
+    package="com.mtan.mrouter" />
